--- a/ModelTrainer.ipynb
+++ b/ModelTrainer.ipynb
@@ -2990,17 +2990,17 @@
     },
     "gpuClass": "standard",
     "kernelspec": {
-      "display_name": "Python 3.9.13 64-bit (windows store)",
+      "display_name": "Python 3.10.6 64-bit",
       "language": "python",
       "name": "python3"
     },
     "language_info": {
       "name": "python",
-      "version": "3.9.13"
+      "version": "3.10.6"
     },
     "vscode": {
       "interpreter": {
-        "hash": "83d04032e859d7f6b4884d0eaea2daded37857bd69838437e04f68722128dc82"
+        "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
       }
     },
     "widgets": {
