Fixed bug on word_text, adjust notebook

--- a/notebooks/I2B2ModelTrainer.ipynb
+++ b/notebooks/I2B2ModelTrainer.ipynb
@@ -1471,7 +1471,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1537,107 +1537,7 @@
         "id": "O3gyoxxmjXBL",
         "outputId": "3234c149-630f-4444-ddfa-4be750a173b9"
       },
-      "outputs": [
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "e679b0bc6f3c4e27b3e6d3da3f87760a",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "Downloading:   0%|          | 0.00/28.0 [00:00<?, ?B/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "a0152673633f4afead8998de56c2940c",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "Downloading:   0%|          | 0.00/570 [00:00<?, ?B/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "24ff3b22d8c446699fa566bafd683306",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "Downloading:   0%|          | 0.00/232k [00:00<?, ?B/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "ddd7f479c5c44534a2d79ff6746c1ae5",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "Downloading:   0%|          | 0.00/466k [00:00<?, ?B/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "5c848945aec0409eacb885ec3772eee6",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "Downloading:   0%|          | 0.00/440M [00:00<?, ?B/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "2022-11-14 03:20:40,836 https://flair.informatik.hu-berlin.de/resources/characters/common_characters not found in cache, downloading to /tmp/tmp846h_t0c\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "100%|██████████| 2887/2887 [00:00<00:00, 720899.90B/s]"
-          ]
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "2022-11-14 03:20:41,379 copying /tmp/tmp846h_t0c to cache at /root/.flair/datasets/common_characters\n",
-            "2022-11-14 03:20:41,383 removing temp file /tmp/tmp846h_t0c\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "from flair.embeddings import (\n",
         "    TransformerWordEmbeddings,\n",
@@ -1654,21 +1554,27 @@
         "\n",
         "flair.device = torch.device('cuda:0') \n",
         "\n",
-        "#flair_forward_embedding = FlairEmbeddings(\"flair/ner-english-large\")\n",
-        "#flair_backward_embedding = FlairEmbeddings(\"news-backward-fast\")\n",
+        "flair_forward_embedding = FlairEmbeddings(\"flair/ner-english-large\")\n",
+        "flair_backward_embedding = FlairEmbeddings(\"news-backward-fast\")\n",
         "\n",
         "bert_embedding = TransformerWordEmbeddings(model='bert-base-uncased',\n",
         "                                       fine_tune=True,\n",
         "                                       use_context=True,\n",
         "                                       )\n",
-        "char_embedding = CharacterEmbeddings()\n",
         "\n",
-        "embeddings = bert_embedding"
+        "stacked_embeddings = StackedEmbeddings(\n",
+        "            embeddings=[\n",
+        "                flair_forward_embedding, \n",
+        "                flair_backward_embedding, \n",
+        "                bert_embedding,\n",
+        "            ])\n",
+        "\n",
+        "embeddings = stacked_embeddings"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1676,43 +1582,7 @@
         "id": "MZodc3YykMlM",
         "outputId": "791d6f8e-fc81-4cd6-8e90-ea10b0701f4a"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Mounted at /content/drive\n",
-            "2022-11-14 03:21:01,006 Reading data from /content\n",
-            "2022-11-14 03:21:01,012 Train: /content/train.txt\n",
-            "2022-11-14 03:21:01,017 Dev: /content/dev.txt\n",
-            "2022-11-14 03:21:01,020 Test: /content/test.txt\n",
-            "33557\n",
-            "2022-11-14 03:21:16,979 Computing label dictionary. Progress:\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "33557it [00:00, 53336.73it/s]"
-          ]
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "2022-11-14 03:21:17,620 Dictionary created for label 'ner' with 9 values: DATE (seen 7190 times), NAME (seen 4291 times), LOCATION (seen 2405 times), AGE (seen 827 times), ID (seen 629 times), PROFESSION (seen 472 times), CONTACT (seen 331 times), PHI (seen 5 times)\n",
-            "Dictionary with 9 tags: <unk>, DATE, NAME, LOCATION, AGE, ID, PROFESSION, CONTACT, PHI\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')\n",
@@ -2450,17 +2320,17 @@
     },
     "gpuClass": "standard",
     "kernelspec": {
-      "display_name": "Python 3.10.6 64-bit",
+      "display_name": "Python 3.9.0 64-bit",
       "language": "python",
       "name": "python3"
     },
     "language_info": {
       "name": "python",
-      "version": "3.10.6"
+      "version": "3.9.0"
     },
     "vscode": {
       "interpreter": {
-        "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+        "hash": "abf41ecfe3ce5f5b475aefb5d30ad0811ea8074c7fcb2b94eb59462eec19aca1"
       }
     },
     "widgets": {
