--- a/notebooks/I2B2ModelTrainer.ipynb
+++ b/notebooks/I2B2ModelTrainer.ipynb
@@ -2320,17 +2320,17 @@
     },
     "gpuClass": "standard",
     "kernelspec": {
-      "display_name": "Python 3.9.0 64-bit",
+      "display_name": "Python 3",
       "language": "python",
       "name": "python3"
     },
     "language_info": {
       "name": "python",
-      "version": "3.9.0"
+      "version": "3.10.6 (main, Aug 30 2022, 05:09:33) [Clang 12.0.0 (clang-1200.0.32.29)]"
     },
     "vscode": {
       "interpreter": {
-        "hash": "abf41ecfe3ce5f5b475aefb5d30ad0811ea8074c7fcb2b94eb59462eec19aca1"
+        "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
       }
     },
     "widgets": {
