Changes to trainer

--- a/notebooks/ModelTrainer.ipynb
+++ b/notebooks/ModelTrainer.ipynb
@@ -2996,7 +2996,7 @@
     },
     "language_info": {
       "name": "python",
-      "version": "3.10.6"
+      "version": "3.10.6 (main, Aug 30 2022, 05:09:33) [Clang 12.0.0 (clang-1200.0.32.29)]"
     },
     "vscode": {
       "interpreter": {
